# smartabasepy

./: .coverage  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
internal_scripts/: README.md  deactivate_users.py  update_date_of_birth.py  update_email_address.py  update_passwords.py  update_uuid.py
smartabasepy/: README.md  __init__.py  database_.py  database_fetch.py  database_main.py  database_option.py  database_process.py  delete_.py  delete_all_database_entries.py  delete_main.py  delete_option.py  export_.py  export_fetch.py  export_filter.py  export_main.py  export_option.py  export_process.py  export_validate.py  file_.py  file_main.py  file_option.py  file_process.py  file_validate.py  form_.py  form_fetch.py  form_main.py  form_option.py  import_.py  import_clean.py  import_fetch.py  import_main.py  import_option.py  import_print.py  import_process.py  import_validate.py  login_.py  login_main.py  login_option.py  user_.py  user_clean.py  (+7 more)
smartabasepy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
smartabasepy/smartabasepy.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_API.py  test_client.py  test_database.py  test_delete.py  test_export.py  test_file.py  test_fixtures.py  test_forms.py  test_import.py  test_internal.py  test_tickets.py  test_user.py  test_vcr_auth.py  test_vcr_user.py  vcr_config.py
tests/cassettes/: create_user.yaml  edit_user.yaml  get_client.yaml  get_group.yaml  get_user.yaml  login.yaml
tests/test_upload/: avatar_upload_results.csv  upload_results.csv
